test/testdata/functions/builtin/too_many_args_error.lox
clock(1, 2, 3); // error: clock() accepts 0 arguments but 3 were given
